erDiagram
    admins {
        bigint_unsigned id PK
        varchar name
        varchar username UK
        varchar password
        varchar remember_token
        varchar email UK
        tinyint role
        tinyint status
        timestamp created_at
        timestamp updated_at
    }

    configuraciones {
        bigint_unsigned id PK
        decimal porcentaje_casa
        timestamp created_at
        timestamp updated_at
    }

    eventos {
        bigint_unsigned id PK
        varchar nombre
        datetime fecha_evento
        varchar link_streaming
        tinyint estatus "1:Próximamente, 2:En curso, 3:Finalizado, 4:Inactivo, 0:Eliminado"
        timestamp created_at
        timestamp updated_at
    }

    peleas {
        bigint_unsigned id PK
        bigint_unsigned evento_id FK
        varchar nombre_peleador_rojo
        varchar nombre_peleador_verde
        int rounds
        tinyint ganador "1:Rojo, 2:Verde, 0:Empate"
        tinyint estatus_pelea "1:Activa, 2:Inactiva, 3:Finalizada, 0:Eliminada"
        tinyint estatus_apuestas "1:Abiertas, 0:Cerradas"
        timestamp created_at
        timestamp updated_at
    }

    pelea_usuario {
        bigint_unsigned id PK
        bigint_unsigned evento_id FK
        bigint_unsigned pelea_id FK
        bigint_unsigned user_id FK
        bigint_unsigned contraparte_user_id FK
        int tipo_gallo "1:Rojo, 2:Verde"
        int modalidad_apuesta "1:Doy, 2:Agarro "
        decimal cantidad_apostada
        decimal ganancia_potencial
        tinyint estatus "2:Pendiente, 1:Activa, 3:Ganada, 4:Perdida, 5:Reembolsada"
        timestamp created_at
        timestamp updated_at
    }

    movimientos {
        bigint_unsigned id PK
        bigint_unsigned user_id FK
        tinyint tipo "1:Depósito, 2:Retiro"
        decimal cantidad
        datetime fecha_movimiento
        varchar referencia
        varchar comprobante
        varchar comentario
        tinyint estatus "1:Pendiente, 2:Completado, 3:Rechazado"
        timestamp created_at
        timestamp updated_at
    }

    users {
        bigint_unsigned id PK
        varchar name
        varchar lastname
        varchar email
        date date_birth
        enum sex "1, 2"
        double balance
        tinyint status
        timestamp created_at
        timestamp updated_at
    }


    eventos ||--o{ peleas : "tiene"
    eventos ||--o{ pelea_usuario : "pertenece"
    peleas ||--o{ pelea_usuario : "incluye"
    users ||--o{ pelea_usuario : "crea"
    users ||--o{ pelea_usuario : "acepta (contraparte)"
    users ||--o{ movimientos : "registra"
